Fix some Bug with banner on safari

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -108,10 +108,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 250px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -287,10 +287,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 250px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -462,10 +462,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 150px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -633,10 +633,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 150px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -804,10 +804,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 150px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -975,10 +975,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 150px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -1147,10 +1147,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 150px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -1318,10 +1318,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 120px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -1490,10 +1490,10 @@
 
     .opened-object {
         display: none;
-        width: 15%;
+        width: 15vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 120px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -1662,10 +1662,10 @@
 
     .opened-object {
         display: none;
-        width: 20%;
+        width: 20vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 90px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -1834,10 +1834,10 @@
 
     .opened-object {
         display: none;
-        width: 25%;
+        width: 25vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 90px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
@@ -2006,10 +2006,10 @@
 
     .opened-object {
         display: none;
-        width: 25%;
+        width: 25vw;
         padding: 15px 0 0 15px;
         transition: 0.5s;
-        position: absolute;
+        position: relative;
         top: 90px;
         color: white;
         background-image: url("../media/main-banner/banner-background-img.jpg");
